fix scrollbars on website

--- a/src/app/styles/globals.css
+++ b/src/app/styles/globals.css
@@ -143,3 +143,125 @@
 w3m-modal.open {
   z-index: 99999 !important;
 }
+
+
+/* Style for our custom scroll classes */
+.bitte-custom-scrollbar,
+.bitte-custom-scrollview {
+  --sb-track-color: #18181b;
+  --sb-thumb-color: #334155;
+  --sb-thumb-hover-color: #64748b;
+  --sb-size: 10px;
+  --sb-padding: 8px;
+  padding-right: var(--sb-padding);
+  box-sizing: border-box;
+}
+
+.bitte-custom-scrollbar::-webkit-scrollbar,
+.bitte-custom-scrollview::-webkit-scrollbar {
+  width: var(--sb-size);
+  height: var(--sb-size);
+}
+
+.bitte-custom-scrollbar::-webkit-scrollbar-track,
+.bitte-custom-scrollview::-webkit-scrollbar-track {
+  background: var(--sb-track-color);
+  border-radius: 11px;
+  margin: 4px;
+}
+
+.bitte-custom-scrollbar::-webkit-scrollbar-thumb,
+.bitte-custom-scrollview::-webkit-scrollbar-thumb {
+  background: var(--sb-thumb-color);
+  border-radius: 11px;
+  border: 2px solid var(--sb-track-color);
+}
+
+.bitte-custom-scrollbar::-webkit-scrollbar-thumb:hover,
+.bitte-custom-scrollview::-webkit-scrollbar-thumb:hover {
+  background: var(--sb-thumb-hover-color);
+}
+
+/* Apply scrollbar styles to children of elements with the bitte-custom-scrollbar class */
+.bitte-custom-scrollbar * {
+  --sb-track-color: #18181b;
+  --sb-thumb-color: #334155;
+  --sb-thumb-hover-color: #64748b;
+  --sb-size: 10px;
+}
+
+.bitte-custom-scrollbar *::-webkit-scrollbar {
+  width: var(--sb-size);
+  height: var(--sb-size);
+}
+
+.bitte-custom-scrollbar *::-webkit-scrollbar-track {
+  background: var(--sb-track-color);
+  border-radius: 11px;
+  margin: 4px;
+}
+
+.bitte-custom-scrollbar *::-webkit-scrollbar-thumb {
+  background: var(--sb-thumb-color);
+  border-radius: 11px;
+  border: 2px solid var(--sb-track-color);
+}
+
+.bitte-custom-scrollbar *::-webkit-scrollbar-thumb:hover {
+  background: var(--sb-thumb-hover-color);
+}
+
+@supports not selector(::-webkit-scrollbar) {
+  .bitte-custom-scrollbar,
+  .bitte-custom-scrollview {
+    scrollbar-color: var(--sb-thumb-color) var(--sb-track-color);
+    scrollbar-width: thin;
+    padding-right: var(--sb-padding);
+  }
+
+  .bitte-custom-scrollbar * {
+    scrollbar-color: var(--sb-thumb-color) var(--sb-track-color);
+    scrollbar-width: thin;
+  }
+}
+
+body {
+  --sb-track-color: #18181b;
+  --sb-thumb-color: #334155;
+  --sb-size: 10px;
+}
+
+body::-webkit-scrollbar {
+  width: var(--sb-size);
+}
+
+body::-webkit-scrollbar-track {
+  background: var(--sb-track-color);
+  border-radius: 11px;
+}
+
+body::-webkit-scrollbar-thumb {
+  background: var(--sb-thumb-color);
+  border-radius: 11px;
+}
+
+@supports not selector(::-webkit-scrollbar) {
+  body {
+    scrollbar-color: var(--sb-thumb-color) var(--sb-track-color);
+  }
+}
+
+/* scrollbar */
+.bitte-disable-scrollbars::-webkit-scrollbar {
+  width: 0px;
+  height: 0px;
+  background: transparent;
+  /* Chrome/Safari/Webkit */
+}
+
+.bitte-disable-scrollbars {
+  scrollbar-width: none;
+  /* Firefox */
+  -ms-overflow-style: none;
+  /* IE 10+ */
+}
